--- a/client/src/app/components/directives/data-view/instantaneous-data-view/instantaneous-data-view.component.html
+++ b/client/src/app/components/directives/data-view/instantaneous-data-view/instantaneous-data-view.component.html
@@ -1,54 +1,54 @@
-<div *ngIf="data.length > 0" class="list-table">
-    <div class="unselectable list-table-header-row flex-container" fxLayout="row">
+<div *ngIf="data.length > 0" class="data-table">
+    <div class="unselectable data-table-header-row flex-container" fxLayout="row">
         <div class="truncate flex-item" fxFlex (click)="sortBy('date')">
-            <span class="list-table-header-label-sortable">Date</span>
-            <md-icon class="list-table-header-sort" [ngClass]="{
-                'list-table-header-sort-reverse':sort.reversed,
-                'list-table-header-sort-inactive':sort.current !== 'date'}">
+            <span class="data-table-header-label-sortable">Date</span>
+            <md-icon class="data-table-header-sort" [ngClass]="{
+                'data-table-header-sort-reverse':sort.reversed,
+                'data-table-header-sort-inactive':sort.current !== 'date'}">
                 arrow_downward</md-icon>
         </div>
         <div class="truncate flex-item" fxFlex>
-            <span class="list-table-header-label">Barom.</span>
+            <span class="data-table-header-label">Barom.</span>
         </div>
         <div class="truncate flex-item" fxFlex (click)="sortBy('inspector')">
-            <span class="list-table-header-label-sortable">Inspector</span>
-            <md-icon class="list-table-header-sort" [ngClass]="{
-                'list-table-header-sort-reverse':sort.reversed,
-                'list-table-header-sort-inactive':sort.current !== 'inspector'}">
+            <span class="data-table-header-label-sortable">Inspector</span>
+            <md-icon class="data-table-header-sort" [ngClass]="{
+                'data-table-header-sort-reverse':sort.reversed,
+                'data-table-header-sort-inactive':sort.current !== 'inspector'}">
                 arrow_downward</md-icon>
         </div>
         <div class="truncate flex-item" fxFlex (click)="sortBy('grid')">
-            <span class="list-table-header-label-sortable">Grid</span>
-            <md-icon class="list-table-header-sort" [ngClass]="{
-                'list-table-header-sort-reverse':sort.reversed,
-                'list-table-header-sort-inactive':sort.current !== 'grid'}">
+            <span class="data-table-header-label-sortable">Grid</span>
+            <md-icon class="data-table-header-sort" [ngClass]="{
+                'data-table-header-sort-reverse':sort.reversed,
+                'data-table-header-sort-inactive':sort.current !== 'grid'}">
                 arrow_downward</md-icon>
         </div>
         <div class="truncate flex-item" fxFlex>
-            <span class="list-table-header-label">Start</span>
+            <span class="data-table-header-label">Start</span>
         </div>
         <div class="truncate flex-item" fxFlex>
-            <span class="list-table-header-label">End</span>
+            <span class="data-table-header-label">End</span>
         </div>
         <div class="truncate flex-item" fxFlex>
-            <span class="list-table-header-label">Instrument</span>
+            <span class="data-table-header-label">Instrument</span>
         </div>
         <div class="truncate flex-item" fxFlex (click)="sortBy('methaneLevel')">
-            <span class="list-table-header-label-sortable">Reading (ppm)</span>
-            <md-icon class="list-table-header-sort" [ngClass]="{
-                'list-table-header-sort-reverse':sort.reversed,
-                'list-table-header-sort-inactive':sort.current !== 'methaneLevel'}">
+            <span class="data-table-header-label-sortable">Reading (ppm)</span>
+            <md-icon class="data-table-header-sort" [ngClass]="{
+                'data-table-header-sort-reverse':sort.reversed,
+                'data-table-header-sort-inactive':sort.current !== 'methaneLevel'}">
                 arrow_downward</md-icon>
         </div>
         <div class="truncate flex-item" fxFlex (click)="sortBy('ime')">
-            <span class="list-table-header-label-sortable">IME#</span>
-            <md-icon class="list-table-header-sort" [ngClass]="{
-                'list-table-header-sort-reverse':sort.reversed,
-                'list-table-header-sort-inactive':sort.current !== 'ime'}">
+            <span class="data-table-header-label-sortable">IME#</span>
+            <md-icon class="data-table-header-sort" [ngClass]="{
+                'data-table-header-sort-reverse':sort.reversed,
+                'data-table-header-sort-inactive':sort.current !== 'ime'}">
                 arrow_downward</md-icon>
         </div>
     </div>
-    <div *ngFor="let inst of data; let isOdd = odd" class="list-table-row flex-container" fxLayout="row" [ngClass]="{'list-table-odd-row': isOdd, 'warmspot': getStatus(inst.methaneLevel) == 'warmspot', 'hotspot': getStatus(inst.methaneLevel) == 'hotspot'}">
+    <div *ngFor="let inst of data; let isOdd = odd" class="data-table-row flex-container" fxLayout="row" [ngClass]="{'data-table-odd-row': isOdd, 'warmspot': getStatus(inst.methaneLevel) == 'warmspot', 'hotspot': getStatus(inst.methaneLevel) == 'hotspot'}">
         <div class="truncate flex-item" fxFlex>{{dateTimeUtils.getDate(inst.startTime)}}</div>
         <div class="truncate flex-item" fxFlex>{{inst.barometricPressure / 100}}</div>
         <div class="truncate flex-item" fxFlex>{{stringUtils.formatUserName(inst.inspector)}}</div>
